{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 73,
  "lineage": "a62f17b0-0c5e-44fd-feba-242439f06b8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:976859928792:instance/i-0b76f2226d0871cc9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b76f2226d0871cc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035234914e27c13fd",
            "private_dns": "ip-10-10-0-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.177",
            "public_ip": "44.197.193.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078175ee8e998df02",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d696e16ecf51363",
            "tags_all": {
              "IAC": "Terraform",
              "env": "Dev",
              "owner": "Sebastian"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03d22c09325e3befc"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:internet-gateway/igw-0a605829f47f6f4d9",
            "id": "igw-0a605829f47f6f4d9",
            "owner_id": "976859928792",
            "tags": {
              "Name": "igw internet gateway"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "igw internet gateway",
              "env": "Dev",
              "owner": "Sebastian"
            },
            "vpc_id": "vpc-0a6109e1b5170fcf3"
          },
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:route-table/rtb-04b1d3e690405741f",
            "id": "rtb-04b1d3e690405741f",
            "owner_id": "976859928792",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a605829f47f6f4d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "public crt",
              "env": "Dev",
              "owner": "Sebastian"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6109e1b5170fcf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033b61dd61ac43d24",
            "route_table_id": "rtb-04b1d3e690405741f",
            "subnet_id": "subnet-02d696e16ecf51363"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:security-group/sg-03d22c09325e3befc",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d22c09325e3befc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "976859928792",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "env": "Dev",
              "owner": "Sebastian"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6109e1b5170fcf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:subnet/subnet-09f0a487da1fb5313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f0a487da1fb5313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "976859928792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "private_subnet",
              "env": "Dev",
              "owner": "Sebastian"
            },
            "vpc_id": "vpc-0a6109e1b5170fcf3"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:subnet/subnet-02d696e16ecf51363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d696e16ecf51363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976859928792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "public_subnet",
              "env": "Dev",
              "owner": "Sebastian"
            },
            "vpc_id": "vpc-0a6109e1b5170fcf3"
          },
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:vpc/vpc-0a6109e1b5170fcf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04cc5bbff5c4c0746",
            "default_route_table_id": "rtb-0b2312792ab72ca17",
            "default_security_group_id": "sg-01f0ac33a50a48c56",
            "dhcp_options_id": "dopt-0a58c513d3a09e3a7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6109e1b5170fcf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2312792ab72ca17",
            "owner_id": "976859928792",
            "tags": {
              "Name": "VPC Virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "VPC Virginia",
              "env": "Dev",
              "owner": "Sebastian"
            }
          }
        }
      ]
    }
  ]
}